# Qubus

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  build_doc.sh  cpu_memory_allocator.hpp  install_ci_dependencies.sh  main.cpp  memory_block.hpp  qbb_logo.tex  qbb_logo_symbol_only.tex  run_tests.sh
kubus/: CMakeLists.txt  cpu_memory_allocator.hpp  kubus_logo.tex  main.cpp
kubus/benchmarks/: CMakeLists.txt  mm_bench.cpp
kubus/doc/user-guide/: conf.py.in
kubus/src/: CMakeLists.txt  abi_info.cpp  backend_registry.cpp  deduce_iteration_space.cpp  deduce_loop_bounds_pass.cpp  evicting_allocator.cpp  kronecker_delta_folding_pass.cpp  local_address_space.cpp  logging.cpp  loop_optimizer.cpp  lower_abstract_indices.cpp  lower_top_level_sums.cpp  lower_top_level_sums_pass.cpp  make_implicit_conversions_explicit.cpp  memory_type.cpp  metadata_builder.cpp  multi_index_handling.cpp  object.cpp  object_factory.cpp  plan.cpp  runtime.cpp  scheduler.cpp  tensor_expr_info.cpp  user_defined_plan.cpp
kubus/src/IR/: CMakeLists.txt  annotations.cpp  binary_operator_expr.cpp  compound_expr.cpp  construct_expr.cpp  deduce_expression_environment.cpp  delta_expr.cpp  equivalence.cpp  expression.cpp  extract.cpp  for_all_expr.cpp  for_expr.cpp  function_declaration.cpp  hash.cpp  if_expr.cpp  index_expr.cpp  intrinsic_function_expr.cpp  intrinsic_function_table.cpp  literal_expr.cpp  local_variable_def_expr.cpp  macro_expr.cpp  pretty_printer.cpp  scoped_view_expr.cpp  spawn_expr.cpp  subscription_expr.cpp  sum_expr.cpp  tensor_access_expr.cpp  tensor_variable.cpp  type.cpp  type_conversion_expr.cpp  type_inference.cpp  unary_operator_expr.cpp  variable_declaration.cpp  variable_declaration_expr.cpp  variable_ref_expr.cpp
kubus/src/backends/: CMakeLists.txt
kubus/src/isl/: CMakeLists.txt  affine_expr.cpp  ast.cpp  ast_builder.cpp  band.cpp  constraint.cpp  context.cpp  flow.cpp  id.cpp  identifier.cpp  local_space.cpp  map.cpp  multi_union_pw_affine_expr.cpp  printer.cpp  pw_aff.cpp  pw_multi_aff.cpp  schedule.cpp  schedule_node.cpp  set.cpp  space.cpp  value.cpp
kubus/src/pattern/: CMakeLists.txt
kubus/tests/: CMakeLists.txt  basic_expressions.cpp  contractions.cpp  kubus_unit_test.hpp  multi_indices.cpp  simple_contraction.cpp
qubus/: CMakeLists.txt  KIR_proposal.txt  cpu_memory_allocator.hpp  main.cpp
qubus/benchmarks/: CMakeLists.txt  const_init_bench.cpp  expression_equality.cpp  memcpy.cpp  mm_bench.cpp  spmv.cpp
qubus/benchmarks/hpx/: CMakeLists.txt  component_creation.cpp
qubus/benchmarks/runtime/: CMakeLists.txt  address_resolution.cpp
qubus/doc/: Doxyfile.in
qubus/doc/user-guide/: about_qubus.rst  conf.py.in  getting_started.rst  index.rst  kir.rst  qir.rst  tutorials.rst
qubus/examples/: .clang-format  CMakeLists.txt
qubus/examples/qtl/: CMakeLists.txt  vector_addition.cpp
qubus/include/qubus/: abi_info.hpp  action_support.hpp  address_allocator.hpp  affine_constraints.hpp  aggregate_vpu.hpp  allocator.hpp  architecture_identifier.hpp  array.hpp  associated_qubus_type.hpp  backend.hpp  backend_registry.hpp  basic_address_space.hpp  block_address_allocator.hpp  computelet.hpp  dataflow.hpp  device_info.hpp  distributed_future.hpp  evicting_allocator.hpp  exception.hpp  execution_context.hpp  foreign_computelet.hpp  foreign_kernel.hpp  generic_ptr.hpp  get_view.hpp  global_id.hpp  host_allocator.hpp  host_backend.hpp  host_memory.hpp  host_object_views.hpp  hpx_utils.hpp  instance_handle.hpp  instance_token.hpp  kernel_arguments.hpp  local_address_space.hpp  local_object_factory.hpp  local_runtime.hpp  logging.hpp  loop_optimizer.hpp  make_implicit_conversions_explicit.hpp  module_library.hpp  (+20 more)
qubus/src/: CMakeLists.txt  abi_info.cpp  address_allocator.cpp  affine_constraints.cpp  aggregate_vpu.cpp  alias_analysis.cpp  allocator.cpp  architecture_identifier.cpp  axiom_analysis.cpp  backend_registry.cpp  basic_address_space.cpp  block_address_allocator.cpp  computelet.cpp  dataflow.cpp  deduce_iteration_space.cpp  evicting_allocator.cpp  foreign_computelet.cpp  global_id.cpp  host_allocator.cpp  host_memory.cpp  index.cpp  instance_handle.cpp  instance_token.cpp  kronecker_delta_folding_pass.cpp  local_address_space.cpp  local_object_factory.cpp  local_runtime.cpp  logging.cpp  loop_optimizer.cpp  lower_abstract_indices.cpp  lower_top_level_sums.cpp  make_implicit_conversions_explicit.cpp  metadata_builder.cpp  module_library.cpp  multi_index_handling.cpp  object.cpp  object_description.cpp  object_factory.cpp  object_instance.cpp  object_materializer.cpp  (+19 more)
qubus/src/IR/: CMakeLists.txt  affine_constraints.cpp  alias_analysis.cpp  annotations.cpp  (+53 more)
qubus/tests/: CMakeLists.txt  alias_analysis.cpp  axiom_analysis.cpp  basic_expressions.cpp  contractions.cpp  cuda.cpp  cuda_support.cpp  foreign_kernels.cpp  index_semantic.cpp  kronecker_delta.cpp  lang.cpp  module.cpp  module_loader.cpp  multi_indices.cpp  parametrized_kernel.cpp  parametrized_tensor_expr.cpp  parsing.cpp  parsing_fuzz.cpp  pretty_print.cpp  qm_patterns.cpp  runtime_library.cpp  scalar_support.cpp  slicing.cpp  sparse_support.cpp  static_schedule_analysis.cpp  symbol_id.cpp  symbolic_regression.cpp  task_invariants_analysis.cpp  value_range_analysis.cpp  value_set_analysis.cpp  variable_access_analysis.cpp
src/: CMakeLists.txt  SCF.cpp  allocator.cpp  emit_implicit_loops_pass.cpp  handle.cpp  hartree_fock_state.cpp  object.cpp  type.cpp
src/IR/: binary_operator_expr.cpp  compound_expr.cpp  expression.cpp  for_all_expr.cpp  for_expr.cpp  literal_expr.cpp  pretty_printer.cpp  sum_expr.cpp  tensor_variable_expr.cpp  type.cpp  type_inference.cpp
src/isl/: CMakeLists.txt  context.cpp  map.cpp  printer.cpp  schedule.cpp  set.cpp  space.cpp
tools/hfme/: CMakeLists.txt  main.cpp  talmi_parser.cpp  talmi_parser.hpp
util/: CMakeLists.txt
util/examples/: CMakeLists.txt
util/src/: CMakeLists.txt  dll.cpp  get_prefix.cpp  handle.cpp  unique_name_generator.cpp
util/tests/: CMakeLists.txt  dense_hash_map.cpp  dense_hash_set.cpp  one_shot.cpp
(+861 files in other folders)
